<resources>
    <string name="app_name">Laundry Billing</string>

    <!-- Names for the items in MainActivity screen -->
    <string name="place_order_button_name">Place Order</string>
    <string name="view_order_history_button_name">View Order History</string>

    <!-- Names for the items in the PlaceOrder screen -->
    <string name="order_type_text_name">Order:</string>
    <string name="item_type_text_name">Item:</string>
    <string name="item_price_text_name">Price:</string>
    <string name="item_sub_type">Sub Type:</string>
    <string name="item_quantity_text_name">Quantity:</string>
    <string name="item_order_number">Order Number:</string>
    <string name="user_name">Customer Name:</string>
    <string name="phone_number">Phone Number:</string>
    <string name="delivery_date">Delivery Date:</string>
    <string name="comments">Comments</string>


    <string name="order_type_radiobutton_wash_name">Wash</string>
    <string name="order_type_radiobutton_iron_name">Iron</string>
    <string name="order_type_radiobutton_darning_name">Darning</string>

    <string name="tap_to_select_name">Tap To Select</string>

    <string name="initial_quantity">1</string>

    <string name="add_item">Add</string>
    <string name="confirm_items">Confirm</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="check_out">Check Out</string>
    <string name="print">Print</string>
    <string name="complete">Order Complete</string>
    <string name="review">Review</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="show_list">Show List</string>
    <string name="total_amount">Total Amount:</string>
    <string name="rupee_symbol">\u20B9</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time</string>
    <string name="delivery_time">Delivery Time:</string>
    <string name="hint_default">...</string>
    <string name="hint_comments">Enter comments (optional)</string>
    <string name="content_desc_default">Image from Android</string>

</resources>
