<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlaceOrder"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/textItemType"
        android:layout_width="92dp"
        android:layout_height="45dp"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="22dp"
        android:gravity="center_vertical"
        android:text="@string/item_type_text_name"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textPrice"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textUserName" />

    <TextView
        android:id="@+id/textPrice"
        android:layout_width="90dp"
        android:layout_height="44dp"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="26dp"
        android:gravity="center_vertical"
        android:text="@string/item_price_text_name"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textItemQuantity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textItemType" />

    <TextView
        android:id="@+id/textUserName"
        android:layout_width="90dp"
        android:layout_height="44dp"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:gravity="center_vertical"
        android:text="@string/item_user_text_name"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textItemType"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioBoxOrderType" />

    <TextView
        android:id="@+id/textItemQuantity"
        android:layout_width="90dp"
        android:layout_height="60dp"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:gravity="center_vertical"
        android:text="@string/item_quantity_text_name"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textPrice" />

    <RadioGroup
        android:id="@+id/radioBoxOrderType"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:nextFocusDown="@id/tbCustomerName"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/textUserName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintVertical_chainStyle="packed">

        <RadioButton
            android:id="@+id/radioButtonWash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/order_type_radiobutton_wash_name"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/radioButtonIron"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/order_type_radiobutton_iron_name"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/radioButtonDarning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/order_type_radiobutton_darning_name"
            android:textSize="20sp" />

    </RadioGroup>

    <TextView
        android:id="@+id/textDisplayQuantity"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="28dp"
        android:gravity="center_vertical"
        android:text="@string/initial_quantity"
        android:textAlignment="center"
        android:textSize="25sp"
        app:layout_constraintEnd_toStartOf="@+id/imageButtonPlus"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageButtonMinus"
        app:layout_constraintBottom_toTopOf="@+id/buttonAddItem"
        app:layout_constraintTop_toBottomOf="@+id/tbPrice"
        tools:layout_editor_absoluteY="309dp" />

    <ImageButton
        android:id="@+id/imageButtonMinus"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginLeft="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="28dp"
        android:background="@android:color/holo_blue_dark"
        android:onClick="onClickQuantityDecreaseButton"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toEndOf="@+id/textItemQuantity"
        app:layout_constraintTop_toBottomOf="@+id/tbPrice"
        app:srcCompat="@android:drawable/arrow_down_float"
        tools:layout_editor_absoluteY="280dp" />

    <ImageButton
        android:id="@+id/imageButtonPlus"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="28dp"
        android:background="@android:color/holo_blue_dark"
        android:onClick="onClickQuantityIncreaseButton"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tbPrice"
        app:srcCompat="@android:drawable/arrow_up_float"
        tools:layout_editor_absoluteY="280dp" />

    <Button
        android:id="@+id/buttonAddItem"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:background="@android:color/holo_blue_dark"
        android:onClick="onClickAddBillItem"
        android:text="@string/add_item"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.711"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textDisplayQuantity"
        app:layout_constraintBottom_toTopOf="@+id/button2"/>

    <Button
        android:id="@+id/button2"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_marginBottom="32dp"
        android:layout_marginTop="20dp"
        android:background="@android:color/holo_blue_dark"
        android:text="@string/confirm_items"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.711"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonAddItem" />

    <EditText
        android:id="@+id/tbItem"
        android:layout_width="195dp"
        android:layout_height="41dp"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="26dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:nextFocusDown="@id/tbPrice"
        app:layout_constraintStart_toEndOf="@+id/textItemType"
        app:layout_constraintTop_toBottomOf="@+id/tbCustomerName"
        app:layout_constraintBottom_toTopOf="@+id/tbPrice"
        tools:layout_editor_absoluteY="178dp" />

    <EditText
        android:id="@+id/tbCustomerName"
        android:layout_width="195dp"
        android:layout_height="41dp"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="34dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:nextFocusDown="@id/tbItem"
        tools:layout_editor_absoluteX="157dp"
        tools:layout_editor_absoluteY="107dp"
        app:layout_constraintStart_toEndOf="@+id/textUserName"
        app:layout_constraintTop_toBottomOf="@+id/radioBoxOrderType"
        app:layout_constraintBottom_toTopOf="@+id/tbItem"/>

    <EditText
        android:id="@+id/tbPrice"
        android:layout_width="197dp"
        android:layout_height="44dp"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="22dp"
        android:ems="10"
        android:inputType="number"
        android:nextFocusDown="@id/textDisplayQuantity"
        tools:layout_editor_absoluteX="155dp"
        tools:layout_editor_absoluteY="246dp"
        app:layout_constraintStart_toEndOf="@+id/textPrice"
        app:layout_constraintTop_toBottomOf="@+id/tbItem"
        app:layout_constraintBottom_toTopOf="@+id/textDisplayQuantity"/>

</android.support.constraint.ConstraintLayout>